# quackML

./: .gitignore  .gitmodules  .nvim-dap.lua  Cargo.toml  LICENSE  README.md  breast_cancer.csv  diabetes.csv  digits.csv  linnerud.csv  requirements.txt  rustfmt.toml  wine.csv  x.session.sql
src/: api.rs  lib.rs  main.rs
src/bindings/: lightgbm.rs  linfa.rs  mod.rs  xgboost.rs
src/bindings/langchain/: mod.rs
src/bindings/python/: mod.rs  python.py
src/bindings/reinforcement/: mod.rs
src/bindings/sklearn/: mod.rs  sklearn.py
src/bindings/transformers/: candle.rs  hf_transformers.rs  mod.rs  transform.rs  transformers.py  whitelist.rs
src/context/: context.rs  mod.rs
src/orm/: algorithm.rs  dataset.rs  metrics.rs  mod.rs  model.rs  project.rs  sampling.rs  search.rs  snapshot.rs  status.rs  strategy.rs  task.rs
src/sql/: schema.sql
