[package]
name = "quack_ml"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
duckdb = {version = "1.0.0", features = ["vtab-loadable"]}
duckdb-loadable-macros = "0.1.2"
flate2 = "1.0.32"
indexmap = {version = "2.4.0", features = ["serde"]}
lazy_static = "1.5.0"
libduckdb-sys = {version = "1.0.0", features = ["bundled", "buildtime_bindgen"]}
ndarray = "0.16.1"
once_cell = "1.19.0"
parking_lot = "0.12.3"
serde = {version = "1.0.208", features = ["derive"]}
serde_json = "1.0.125"

[lib]
crate-type = ["cdylib"]
name = "quack_ml"
