[package]
name = "quack_ml"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
duckdb = {version = "1.0.0", features = ["vtab-loadable"]}
duckdb-loadable-macros = "0.1.2"
flate2 = "1.0.32"
indexmap = {version = "2.4.0", features = ["serde"]}
lazy_static = "1.5.0"
libduckdb-sys = {version = "1.0.0", features = ["bundled", "buildtime_bindgen"]}
lightgbm = { git = "https://github.com/postgresml/lightgbm-rs", branch = "main" }
linfa = "0.7.0"
linfa-linear = {version = "0.7.0", features = ["serde"]}
linfa-logistic = {version = "0.7.0", features = ["serde"]}
linfa-svm = {version = "0.7.0", features = ["serde"]}
ndarray = "0.16.1"
once_cell = "1.19.0"
parking_lot = "0.12.3"
rand = "0.8.5"
serde = {version = "1.0.208", features = ["derive"]}
serde_json = "1.0.125"
xgboost = { git = "https://github.com/postgresml/rust-xgboost", branch = "master" }

[lib]
crate-type = ["cdylib"]
name = "quack_ml"
