[package]
name = "quack_ml"
version = "0.1.0"
edition = "2021"
[features]
default = ["python"]
python = ["pyo3"]

[dependencies.pyo3]
version = "0.20.0"
optional = true
features = ["anyhow", "auto-initialize"]

[workspace]
members = ["duckdb-rs/crates/duckdb", "duckdb-rs/crates/duckdb-loadable-macros", "duckdb-rs/crates/libduckdb-sys"]

[workspace.package]
version = "1.0.0"
authors = ["wangfenjin <wangfenj@gmail.com>"]
edition = "2021"
repository = "https://github.com/duckdb/duckdb-rs"
homepage = "https://github.com/duckdb/duckdb-rs"
documentation = "http://docs.rs/duckdb/"
readme = "README.md"
keywords = ["duckdb", "database", "ffi"]
license = "MIT"
categories = ["database"]


[workspace.dependencies]
duckdb = { version = "1.0.0", path = "duckdb-rs/crates/duckdb" }
libduckdb-sys = { version = "1.0.0", path = "duckdb-rs/crates/libduckdb-sys" }
duckdb-loadable-macros = { version = "0.1.2", path = "duckdb-rs/crates/duckdb-loadable-macros" }
autocfg = "1.0"
bindgen = { version = "0.69", default-features = false }
byteorder = "1.3"
calamine = "0.22.0"
cast = "0.3"
cc = "1.0"
chrono = "0.4.22"
csv = "1.1"
doc-comment = "0.3"
fallible-iterator = "0.3"
fallible-streaming-iterator = "0.1"
flate2 = "1.0"
hashlink = "0.9"
lazy_static = "1.4"
memchr = "2.3"
num = { version = "0.4", default-features = false }
num-integer = "0.1.46"
pkg-config = "0.3.24"
polars = "0.35.4"
polars-core = "0.35.4"
pretty_assertions = "1.4.0"
prettyplease = "0.2.20"
proc-macro2 = "1.0.56"
quote = "1.0.21"
r2d2 = "0.8.9"
rand = "0.8.3"
regex = "1.6"
rust_decimal = "1.14"
serde = "1.0"
serde_json = "1.0"
smallvec = "1.6.1"
strum = "0.25"
syn = "2.0.15"
tar = "0.4.38"
tempdir = "0.3.7"
tempfile = "3.1.0"
unicase = "2.6.0"
url = "2.1"
uuid = "1.0"
vcpkg = "0.2"
arrow = { version = "52", default-features = false }

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
duckdb = {path = "duckdb-rs/crates/duckdb" , features = ["vtab-loadable", "modern-full"]}
duckdb-loadable-macros = { path = "duckdb-rs/crates/duckdb-loadable-macros" }
flate2 = "1.0.32"
indexmap = {version = "2.4.0", features = ["serde"]}
itertools = "0.13.0"
lazy_static = "1.5.0"
libduckdb-sys = { path = "duckdb-rs/crates/libduckdb-sys" , features = [ "loadable_extension", "buildtime_bindgen"]}
lightgbm = { git = "https://github.com/postgresml/lightgbm-rs", branch = "main" }
linfa = { git = "https://github.com/postgresml/linfa", branch = "master" }
linfa-linear = { git = "https://github.com/postgresml/linfa", package = "linfa-linear" ,branch = "master", features = ["serde"] }
linfa-logistic = { git = "https://github.com/postgresml/linfa", package = "linfa-logistic", branch = "master", features = ["serde"] }
linfa-svm = { git = "https://github.com/postgresml/linfa", package = "linfa-svm", branch = "master", features = ["serde"] }
log = "0.4.22"
ndarray = {version = "0.15.6", features = ["serde"]}
ndarray-stats = "0.6.0"
once_cell = "1.19.0"
parking_lot = "0.12.3"
rand = "0.8.5"
rmp-serde = "1.3.0"
serde = {version = "1.0.208", features = ["derive"]}
serde_json = "1.0.125"
serde_with = "3.9.0"
signal-hook = "0.3.17"
xgboost = { git = "https://github.com/postgresml/rust-xgboost", branch = "master" }

[lib]
crate-type = ["cdylib"]
name = "quack_ml"
